# externalsort_habr

./: CMakeLists.txt  main.cpp
